Add jvm args with add-opens (#145)
- when running sample apps
- when running tests

Closes #143